--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#bluebox {
+  bottom: 41%;
+
+  min-width: 288px;
+
+  min-height: 40px;
+}
